# kmb

./: .env.example  .gitignore  README.md  pyproject.toml
app/: auth.py  config.py  db.py  log.py  mailer.py  main.py  models.py  models.py.tmp.54960.7db07fe7d100  schema.sql  services.py  sms.py
app/routers/: admin.py  customer.py
app/templates/: base.html
app/templates/admin/: calendar.html  calendar.html.tmp.9040.f32bd130513a  day_edit.html  settings.html
app/templates/customer/: booking.html  booking.html.tmp.18412.2a98d73ca90a  booking.html.tmp.43016.770d678df157  calendar.html  calendar.html.tmp.43016.c5caf25f32fc  complete.html  survey.html  verified.html  verify_error.html  verify_sms.html
deploy/systemd/: kmb.service
